--- a/shm/CMakeLists.txt
+++ b/shm/CMakeLists.txt
@@ -1,45 +1,46 @@
-cmake_minimum_required(VERSION 2.8.2)
+cmake_minimum_required(VERSION 3.5)
+project(Sandbox)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+#set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_BUILD_TYPE Debug)
 
-# Download and unpack googletest at configure time
-configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
-execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
-  RESULT_VARIABLE result
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-if(result)
-  message(FATAL_ERROR "CMake step for googletest failed: ${result}")
-endif()
-execute_process(COMMAND ${CMAKE_COMMAND} --build .
-  RESULT_VARIABLE result
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-if(result)
-  message(FATAL_ERROR "Build step for googletest failed: ${result}")
-endif()
+#set(CMAKE_CXX_COMPILER  "/usr/bin/clang++")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
 
-# Prevent overriding the parent project's compiler/linker
-# settings on Windows
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+add_compile_options(-Wall -Wextra -pedantic -Werror  )
 
-# Add googletest directly to our build. This defines
-# the gtest and gtest_main targets.
-add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
-                 ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
-                 EXCLUDE_FROM_ALL)
+include(cmake/GTest.cmake)
 
-# The gtest/gtest_main targets carry header search path
-# dependencies automatically when using CMake 2.8.11 or
-# later. Otherwise we have to add them here ourselves.
-if (CMAKE_VERSION VERSION_LESS 2.8.11)
-  include_directories("${gtest_SOURCE_DIR}/include")
-endif()
+include_directories(
+        ${GTEST_INCLUDE_DIRS}
+        ${GMOCK_INCLUDE_DIRS}
+)
 
-project(shm)
+
+
+#add_executable(tests PalindromeTests.cpp)
+#add_executable(tests RomanConverterTests.cpp )
+#add_executable(tests Validation.cpp )
+#add_executable(tests is_isomorfphic.cpp)
+#add_executable(tests merge.cpp)
+#add_executable(tests selection_sort.cpp) --not finished
+#add_executable(tests Calculator.cpp)
+add_executable(tests test.cpp Map.cpp Ship.cpp Island.cpp Cargo.cpp Player.cpp Coordinates.cpp)
+
+target_link_libraries(tests
+        gtest
+        gmock
+        gtest_main)
+
+
+set_property(TARGET tests PROPERTY CXX_STANDARD 17)
+
+#this is a bit of overkill, but it enables to run ctest
 enable_testing()
 
-add_executable(${PROJECT_NAME} main.cpp Ship.hpp Player.cpp)
-add_executable(${PROJECT_NAME}-ut test.cpp)
-
-target_link_libraries(${PROJECT_NAME}-ut gtest_main)
-add_test(NAME ${PROJECT_NAME}_test COMMAND ${PROJECT_NAME}-ut)
+add_test(
+        NAME allTests
+        COMMAND tests
+)
